bridge/base/0-xbp-monitoring-namespace.yaml
#! 0-xbp-monitoring-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: xbp-monitoring
    labels:
        com.docker.compose.project: xbp-monitoring
