bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: xbp-monitoring
    labels:
        com.docker.compose.project: xbp-monitoring
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: xbp-monitoring
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: xbp-monitoring
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: xbp-monitoring-backend
                  image: xbp-monitoring-backend
                  imagePullPolicy: IfNotPresent
                  args:
                    - cargo
                    - watch
                    - -x
                    - run -- --file /app/xbp.yml
                  ports:
                    - name: backend-3000
                      containerPort: 3000
                    - name: backend-9464
                      containerPort: 9464
                  volumeMounts:
                    - name: app-xbp-yml
                      mountPath: /app/xbp.yml
                      readOnly: true
                    - name: app
                      mountPath: /app
                    - name: app-target
                      mountPath: /app/target
                    - name: usr-local-cargo-registry
                      mountPath: /usr/local/cargo/registry
                    - name: usr-local-cargo-git
                      mountPath: /usr/local/cargo/git
            volumes:
                - name: app-xbp-yml
                  hostPath:
                    path: C:\Users\floris\Documents\GitHub\xbp-monitoring\xbp.yml
                  readOnly: true
                - name: app
                  hostPath:
                    path: C:\Users\floris\Documents\GitHub\xbp-monitoring
                - name: app-target
                  persistentVolumeClaim:
                    claimName: backend-backend-target
                - name: usr-local-cargo-registry
                  persistentVolumeClaim:
                    claimName: backend-cargo-registry
                - name: usr-local-cargo-git
                  persistentVolumeClaim:
                    claimName: backend-cargo-git
